feat: add JPMS module descriptor via Multi-Release JAR to support scoped native access on Java 22+(#7)